# CLove

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  SKILLS.md
native/: game.c
opt/examples/fh/batch/: clove  config.fh  main.fh
opt/examples/fh/font/: clove  main.fh
opt/examples/lua/: clove  conf.lua  main.lua
src/: fh_mainactivity.c  lua_mainactivity.c  main.c  system.c
src/audio/: audio.c  source.c  streamsource.c  vorbis_decoder.c
src/fhapi/: audio.c  config.c  graphics_batch.c  graphics_canvas.c  graphics_font.c  graphics_geometry.c  graphics_quad.c  graphics_shader.c  graphics_window.c  image.c  math.c  ui.c
src/filesystem/: filesystem.c
src/graphics/: batch.c  bitmap_font.c  canvas.c  font.c  geometry.c  gltools.c  graphics.c  image.c  mesh.c
src/include/: batch.h  fh_mainactivity.h  filesystem.h  font.h  gltools.h  graphics.h  list_shaders.h  ui.h  utils.h
src/ui/: atlas.inl  ui.c
tests/: README.md  run_tests.sh
tests/fh/: test_imagedata.fh  test_int_number_args.fh  test_math_noise.fh  test_quad.fh  test_spritebatch.fh  test_version.fh  test_window.fh  xfail_getpixel_argcount.fh  xfail_setpixel_argcount.fh  xfail_setviewport_argcount.fh
